# splitter

./: Cargo.toml  README.md
src/: ledger.rs  main.rs  transaction.rs
src/tui/: mod.rs  parser.rs
