[package]
name = "splitter"
version = "0.1.0"
authors = ["Róbert Selvek <robert.selvek@ataccama.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.2.1"
chrono = "0.4"

[dev-dependencies]
rust_decimal_macros = "1.2.1"
